--- a/_config.yml
+++ b/_config.yml
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  name             : "Jim Tsui"
+  avatar           : "assets/images/bio-photo.jpg" # path of avatar image, e.g. /
+  bio              : "AIoT | For Bluetooth and Voice Technology."
+  location         : "Shenzhen,CN"
   email            :
   links:
     - label: "Email"
