--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,4 +9,4 @@ main:
   - title: "Specification Datasheet"
     url: /datasheet/
   - title: "Quick-Get Sample"
-    url: https://www.aliexpress.com/store/1104656113
+    url: https://www.aliexpress.com/store/1104656113/
