--- a/_config.yml
+++ b/_config.yml
@@ -1,142 +1,59 @@
-# Theme Settings
+# 核心设置
 remote_theme: "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "default"
+plugins:
+  - jekyll-remote-theme
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-feed
 
-# Site Settings
-locale: "en-US"
-title: "BLE Voice"
-title_separator: "-"
-name: "Jim Tsui"
-description: "For Bluetooth and Voice Technology"
-url: "https://blevoice.github.io"
-baseurl: ""
-repository: "blevoice/blevoice.github.io"
-logo: "assets/images/bio-photo.jpg"
-masthead_title: "BLE Voice"
-breadcrumbs: true
-copyright: "BLE Voice"
-copyright_url: "https://blevoice.github.io"
+# 强制忽略主题测试文件
+exclude:
+  - docs
+  - test
+  - .github
+  - .editorconfig
+  - .gitattributes
+  - .gitignore
+  - .travis.yml
+  - CHANGELOG.md
+  - minimal-mistakes-jekyll.gemspec
+  - README.md
+  - screenshot.png
 
-# Site Author
-author:
-  name: "Jim Tsui"
-  avatar: "assets/images/bio-photo.jpg"
-  bio: "AIoT | For Bluetooth and Voice Technology."
-  location: "Shenzhen,CN"
-
-# Collections Configuration
+# 集合配置
 collections:
   bluetooth:
     output: true
     permalink: /bluetooth/:path/
-    defaults:
-      - scope:
-          path: "_bluetooth"
-          type: bluetooth
-        values:
-          layout: single
-          author_profile: true
-          show_in_home: true
-          sidebar:
-            nav: "main"
-
   voice:
     output: true
     permalink: /voice/:path/
-    defaults:
-      - scope:
-          path: "_voice"
-          type: voice
-        values:
-          layout: single
-          author_profile: true
-          show_in_home: true
-          sidebar:
-            nav: "main"
-
   jieli:
     output: true
     permalink: /jieli/:path/
-    defaults:
-      - scope:
-          path: "_jieli"
-          type: jieli
-        values:
-          layout: single
-          author_profile: true
-          show_in_home: true
-          sidebar:
-            nav: "main"
-
   datasheet:
     output: true
     permalink: /datasheet/:path/
-    defaults:
-      - scope:
-          path: "_datasheet"
-          type: datasheet
-        values:
-          layout: single
-          author_profile: true
-          show_in_home: true
-          sidebar:
-            nav: "main"
 
-# Defaults
 defaults:
   - scope:
-      path: ""
-      type: posts
+      path: "_bluetooth"
+      type: bluetooth
     values:
       layout: single
       author_profile: true
-      read_time: true
-      share: true
-      related: true
+      sidebar:
+        nav: "main"
 
   - scope:
-      path: "_bluetooth/_posts"
-      type: posts
+      path: "_voice"
+      type: voice
     values:
       layout: single
       author_profile: true
-      categories: [bluetooth]
+      sidebar:
+        nav: "main"
 
-  - scope:
-      path: "_voice/_posts"
-      type: posts
-    values:
-      layout: single
-      author_profile: true
-      categories: [voice]
-
-# Plugins
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jekyll-include-cache
-  - jekyll-remote-theme
-
-# Pagination
-paginate: 5
-paginate_path: "/page:num/"
-
-# Build settings
-markdown: kramdown
-highlighter: rouge
-sass:
-  sass_dir: _sass
-  style: compressed
-exclude:
-  - "*.sublime-project"
-  - "*.sublime-workspace"
-  - vendor
-  - .asset-cache
-  - .bundle
-  - .jekyll-cache
-  - .sass-cache
-  - assets/js/plugins
-  - assets/js/vendor
-  - node_modules
+# 其他必要配置
+url: "https://blevoice.github.io"
+baseurl: ""
